--- a/Letter_to_Pythocles_Bailey_Bilingual (master).html
+++ b/Letter_to_Pythocles_Bailey_Bilingual (master).html
@@ -338,7 +338,7 @@ The Greek and English texts are both from from "Epicurus: The Extant Remains" (1
 </tr>
 <tr>
     <td>
-        ἔτι τε ἐνδέχεται τὴν σελήvnv ἐξ ἑαυτῆς ἔχειν τὸ φῶς, ἐνδέχεται δὲ ἀπὸ τοῦ ἡλίου.
+        ἔτι τε ἐνδέχεται τὴν σελήνην ἐξ ἑαυτῆς ἔχειν τὸ φῶς, ἐνδέχεται δὲ ἀπὸ τοῦ ἡλίου.
     </td>
     <td> 
         Next the moon may have her light from herself or from the sun.
