--- a/Letter_to_Pythocles_Usener.html
+++ b/Letter_to_Pythocles_Usener.html
@@ -86,7 +86,7 @@ The text is from Epicurea (1887), edited by Hermann Usener. It was created using
 <p class="indent">
 [94] Κένωσίς τε σελήνης καὶ πάλιν πλήρωσις καὶ κατὰ στροφὴν τοῦ σώματος τούτου δύναιτ᾽ ἂν γίνεσθαι καὶ κατὰ σχηματισμοὺς ἀέρος ὁμοίως, ἔτι τε καὶ κατ᾽ ἐπιπροσθετήσεις καὶ κατὰ πάντας τρόπους, καθ᾽ οὓς καὶ τὰ παρ᾽ ἡμῖν φαινόμενα ἐκκαλεῖται εἰς τὰς τούτου τοῦ εἴδους ἀποδόσεις, ἐὰν μή τις τὸν μοναχῇ τρόπον κατηγαπηκὼς τοὺς ἄλλους κενῶς ἀποδοκιμάζῃ, οὐ τεθεωρηκὼς τί δυνατὸν ἀνθρώπῳ θεωρῆσαι καὶ τί ἀδύνατον, καὶ διὰ τοῦτο ἀδύνατα θεωρεῖν ἐπιθυμῶν.
 
-Ἔτι τε ἐνδέχεται τὴν σελήvnv ἐξ ἑαυτῆς ἔχειν τὸ φῶς, ἐνδέχεται δὲ ἀπὸ τοῦ ἡλίου.
+Ἔτι τε ἐνδέχεται τὴν σελήνnν ἐξ ἑαυτῆς ἔχειν τὸ φῶς, ἐνδέχεται δὲ ἀπὸ τοῦ ἡλίου.
 
 [95] καὶ γὰρ παρ᾽ ἡμῖν θεωρεῖται πολλὰ μὲν ἐξ ἑαυτῶν ἔχοντα, πολλὰ δὲ ἀφ᾽ ἑτέρων.
 
