--- a/Letter_to_Pythocles_Bailey.html
+++ b/Letter_to_Pythocles_Bailey.html
@@ -74,7 +74,7 @@ The Greek and English texts are both from from "Epicurus: The Extant Remains" (1
 </tr>
 <tr>
     <td>
-        [98] Μήκη νυκτῶν καὶ ἡμερῶν παραλλάττοντα καὶ παρὰ τὸ ταχείας ἡλίου κινήσεις γίνεσθαι καὶ πάλιν βραδείας ὑπὲρ γῆς, παρὰ τὸ μήκη τόπων παραλλάττοντα &lt;διιέναι&gt; καὶ &lt;παρὰ τὸ&gt; τόπους τινὰς περαιοῦν τάκιον ἤ βραδύτερον, ὡς καὶ παρ᾽ ἡμῖν τινα θεωρεῖται, οἷς συμφώνως δεῖ λέγειν ἐπὶ τῶν μετεώρων. οἱ δὲ τὸ ἕν λαμβάνοντες τοῖς τε φαινομένοις μάχονται καὶ τοῦ εἰ δυνατὸν ἀνθρώπῳ θεωρῆσαι διαπεπτώκασιν.
+        [98] Μήκη νυκτῶν καὶ ἡμερῶν παραλλάττοντα καὶ παρὰ τὸ ταχείας ἡλίου κινήσεις γίνεσθαι καὶ πάλιν βραδείας ὑπὲρ γῆς, παρὰ τὸ μήκη τόπων παραλλάττοντα &lt;διιέναι&gt; καὶ &lt;παρὰ τὸ&gt; τόπους τινὰς περαιοῦν τάχιον ἤ βραδύτερον, ὡς καὶ παρ᾽ ἡμῖν τινα θεωρεῖται, οἷς συμφώνως δεῖ λέγειν ἐπὶ τῶν μετεώρων. οἱ δὲ τὸ ἕν λαμβάνοντες τοῖς τε φαινομένοις μάχονται καὶ τοῦ εἰ δυνατὸν ἀνθρώπῳ θεωρῆσαι διαπεπτώκασιν.
     </td>
     <td> 
         [98] The successive changes in the length of nights and days may be due to the fact that the sun’s movements above the earth become fast and then slow again because he passes across regions of unequal length or because he traverses some regions more quickly or more slowly, &lt;or again to the quicker or slower gathering of the fires that make the sun&gt;, as we observe occurs with some things on earth, with which we must be in harmony in speaking of celestial phenomena. But those who assume one cause fight against the evidence of phenomena and fail to ask whether it is possible for men to make such observations.
@@ -82,7 +82,7 @@ The Greek and English texts are both from from "Epicurus: The Extant Remains" (1
 </tr>
 <tr>
     <td>
-        Ἐπισημασίαι δύνανται γίνεσθαι καὶ κατὰ συγκυρήσεις καιρῶν, καθάπερ ἐν τοῖς ἐμφανέσι παρ᾽ ἡμῖν ζῴοις, καὶ παρ᾽ ἑτεροιώσεις ἀέρος καὶ μεταβολάς· ἀμφότερα γὰρ ταῦτὰ οὐ μάχεται τοῖς φαινομένοις· [99] ἐπὶ δὲ ποίοις παρὰ τοῦτο ἢ τοῦτο τὸ αἴτιον γίνεται, οὐκ ἔστι συνιδεῖν.
+        Ἐπισημασίαι δύνανται γίνεσθαι καὶ κατὰ συγκυρήσεις καιρῶν, καθάπερ ἐν τοῖς ἐμφανέσι παρ᾽ ἡμῖν ζῴοις, καὶ παρ᾽ ἑτεροιώσεις ἀέρος καὶ μεταβολάς· ἀμφότερα γὰρ ταῦτα οὐ μάχεται τοῖς φαινομένοις· [99] ἐπὶ δὲ ποίοις παρὰ τοῦτο ἢ τοῦτο τὸ αἴτιον γίνεται, οὐκ ἔστι συνιδεῖν.
     </td>
     <td> 
         Signs of the weather may occur owing to the coincidence of occasions, as happens with animals we can all see on earth, and also through alterations and changes in the atmosphere. For both these are in accordance with phenomena. [99] But under what circumstances the cause is produced by this or that, we cannot perceive.
