--- a/Letter_to_Pythocles_Bailey_Bilingual (master).html
+++ b/Letter_to_Pythocles_Bailey_Bilingual (master).html
@@ -434,7 +434,7 @@ The Greek and English texts are both from from "Epicurus: The Extant Remains" (1
 </tr>
 <tr>
     <td>
-        [98] Μήκη νυκτῶν καὶ ἡμερῶν παραλλάττοντα καὶ παρὰ τὸ ταχείας ἡλίου κινήσεις γίνεσθαι καὶ πάλιν βραδείας ὑπὲρ γῆς, παρὰ τὸ μήκη τόπων παραλλάττοντα &lt;διιέναι&gt; καὶ &lt;παρὰ τὸ&gt; τόπους τινὰς περαιοῦν τάκιον ἤ βραδύτερον, ὡς καὶ παρ᾽ ἡμῖν τινα θεωρεῖται, οἷς συμφώνως δεῖ λέγειν ἐπὶ τῶν μετεώρων.
+        [98] Μήκη νυκτῶν καὶ ἡμερῶν παραλλάττοντα καὶ παρὰ τὸ ταχείας ἡλίου κινήσεις γίνεσθαι καὶ πάλιν βραδείας ὑπὲρ γῆς, παρὰ τὸ μήκη τόπων παραλλάττοντα &lt;διιέναι&gt; καὶ &lt;παρὰ τὸ&gt; τόπους τινὰς περαιοῦν τάχιον ἤ βραδύτερον, ὡς καὶ παρ᾽ ἡμῖν τινα θεωρεῖται, οἷς συμφώνως δεῖ λέγειν ἐπὶ τῶν μετεώρων.
     </td>
     <td> 
         [98] The successive changes in the length of nights and days may be due to the fact that the sun's movements above the earth become fast and then slow again because he passes across regions of unequal length or because he traverses some regions more quickly or more slowly, &lt;or again to the quicker or slower gathering of the fires that make the sun&gt;, as we observe occurs with some things on earth, with which we must be in harmony in speaking of celestial phenomena.
@@ -458,7 +458,7 @@ The Greek and English texts are both from from "Epicurus: The Extant Remains" (1
 </tr>
 <tr>
     <td>
-        ἀμφότερα γὰρ ταῦτὰ οὐ μάχεται τοῖς φαινομένοις·
+        ἀμφότερα γὰρ ταῦτα οὐ μάχεται τοῖς φαινομένοις·
     </td>
     <td> 
         For both these are in accordance with phenomena.
