--- a/Letter_to_Pythocles_Usener.html
+++ b/Letter_to_Pythocles_Usener.html
@@ -119,7 +119,7 @@ The text is from Epicurea (1887), edited by Hermann Usener. It was created using
 <p class="indent">
 Ἐπισημασίαι δύνανται γίνεσθαι καὶ κατὰ συγκυρήσεις καιρῶν, καθά περ ἐν τοῖς ἐμφανέσι παρ᾽ ἡμῖν ζῴοις, καὶ παρ᾽ ἑτεροιώσεις ἀέρος καὶ μεταβολάς.
 
-ἀμφότερα γὰρ ταῦτὰ οὐ μάχεται τοῖς φαινομένοις·
+ἀμφότερα γὰρ ταῦτα οὐ μάχεται τοῖς φαινομένοις·
 
 [99] ἐπὶ δὲ ποίοις παρὰ τοῦτο ἢ τοῦτο τὸ αἴτιον γίνεται, οὐκ ἔστι συνιδεῖν.
 </p>
