Up to accented epsilons

--- a/Second_Meditation_Veitch_Bilingual (master).html
+++ b/Second_Meditation_Veitch_Bilingual (master).html
@@ -792,6 +792,94 @@ The Latin text is from the 1897-1910 edition produced in Paris by Adam and Tanne
         But (and this it is of moment to observe) the perception of it is neither an act of sight, of touch, nor of imagination, and never was either of these, though it might formerly seem so, but is simply an intuition (inspectio) of the mind, which may be imperfect and confused, as it formerly was, or very clear and distinct, as it is at present, according as the attention is more or less directed to the elements which it contains, and of which it is composed.
     </td>
 </tr>
+<tr>
+    <td>
+        13. Miror verò interim quàm prona sit mea mens in errores;  
+    </td>
+    <td> 
+        13. But, meanwhile, I feel greatly astonished when I observe [the weakness of my mind, and] its proneness to error.
+    </td>
+</tr>
+<tr>
+    <td>
+        nam quamvis haec apud me tacitus & sine voce considerem, haereo tamen in verbis ipsis, & fere decipior ab ipso usu loquendi.
+    </td>
+    <td> 
+        For although, without at all giving expression to what I think, I consider all this in my own mind, words yet occasionally impede my progress, and I am almost led into error by the terms of ordinary language.
+    </td>
+</tr>
+<tr>
+    <td>
+        Dicimus enim nos videre ceram ipsammet, si adsit, non ex colore vel figurâ eam adesse judicare.
+    </td>
+    <td> 
+        We say, for example, that we see the same wax when it is before us, and not that we judge it to be the same from its retaining the same color and figure:
+    </td>
+</tr>
+<tr>
+    <td>
+        Unde concluderem statim: ceram ergo visione oculi, non solius mentis inspectione, cognosci; nisi jam forte respexissem ex fenestrâ homines in plateâ transeuntes, quos etiam ipsos non minus usitate quàm ceram dico me videre.
+    </td>
+    <td> 
+        whence I should forthwith be disposed to conclude that the wax is known by the act of sight, and not by the intuition of the mind alone, were it not for the analogous instance of human beings passing on in the street below, as observed from a window.
+    </td>
+</tr>
+<tr>
+    <td>
+        Quid autem video praeter pileos & vestes, sub quibus latere possent automata?
+    </td>
+    <td> 
+        In this case I do not fail to say that I see the men themselves, just as I say that I see the wax; and yet what do I see from the window beyond hats and cloaks that might cover artificial machines, whose motions might be determined by springs?
+    </td>
+</tr>
+<tr>
+    <td>
+        Sed judico homines esse. Atque ita id quod putabam me videre oculis, solâ judicandi facultate, quae in mente meâ est, comprehendo.
+    </td>
+    <td> 
+        But I judge that there are human beings from these appearances, and thus I comprehend, by the faculty of judgment alone which is in the mind, what I believed I saw with my eyes. 
+    </td>
+</tr>
+<tr>
+    <td>
+        14. Sed pudeat supra vulgus sapere cupientem, ex formis loquendi quas vulgus invenit dubitationem quaesivisse; pergamusque deinceps, attendendo utrùm ego perfectius evidentiusque percipiebam quid esset cera, cùm primùm aspexi, credidique me illam ipso sensu externo, vel saltem sensu communi, ut vocant, id est potentiâ imaginatrice, cognoscere?
+    </td>
+    <td> 
+        14. The man who makes it his aim to rise to knowledge superior to the common, ought to be ashamed to seek occasions of doubting from the vulgar forms of speech: instead, therefore, of doing this, I shall proceed with the matter in hand, and inquire whether I had a clearer and more perfect perception of the piece of wax when I first saw it, and when I thought I knew it by means of the external sense itself, or, at all events, by the common sense (sensus communis), as it is called, that is, by the imaginative faculty;
+    </td>
+</tr>
+<tr>
+    <td>
+        an verò potiùs nunc, postquam diligentiùs investigavi tum quid ea sit, tum quomodo cognoscatur?
+    </td>
+    <td> 
+        or whether I rather apprehend it more clearly at present, after having examined with greater care, both what it is, and in what way it can be known.
+    </td>
+</tr>
+<tr>
+    <td>
+        Certe hac de re dubitare esset ineptum; nam quid fuit in primâ perceptione distinctum?
+    </td>
+    <td> 
+        It would certainly be ridiculous to entertain any doubt on this point. For what, in that first perception, was there distinct?
+    </td>
+</tr>
+<tr>
+    <td>
+        Quid quod non a quovis animali haberi posse videretur?
+    </td>
+    <td> 
+        What did I perceive which any animal might not have perceived?
+    </td>
+</tr>
+<tr>
+    <td>
+        At verò cùm ceram ab externis formis distinguo, & tanquam vestibus detractis nudam considero, sic illam revera, quamvis adhuc error in judicio meo esse possit, non possum tamen sine humanâ mente percipere.
+    </td>
+    <td> 
+        But when I distinguish the wax from its exterior forms, and when, as if I had stripped it of its vestments, I consider it quite naked, it is certain, although some error may still be found in my judgment, that I cannot, nevertheless, thus apprehend it without possessing a human mind.
+    </td>
+</tr>
 </table>
 
 <h1>Commentary</h1>
@@ -802,11 +890,9 @@ The Latin text is from the 1897-1910 edition produced in Paris by Adam and Tanne
 
 <h3>Paragraph 1</h3>
 
-<p>The rhetoric at the opening of this meditation does not match the result of the First Meditation.</p>
+<p>Notice how incongruous this rhetoric is with the conclusion of the first meditation, where Descartes stated that he was going to force himself to adopt a skeptical hypothesis, even though he naturally falls back into common sense beliefs. Here Descartes writes that he has "fallen unexpectedly into a deep whirlpool which tumbles me around so that I can neither stand on the bottom nor swim up to the top." Is that an apt metaphor for artificially forcing oneself to doubt one's everyday beliefs? Descartes seems to have forgotten the end of the previous meditation, and has actually come to believe the evil demon hypothesis, instead of merely supposing it in the quest to see if any propositions are indubitable. Why is there such an emotional valence to his language? The reason is that Descartes is really referring here to the abolishment of the Timean-Aristotelian worldview, rather than to skepticism. What had been previously taken as a firm foundation, the Earth itself, at the center of a beautiful universe of crystal spheres spinning with mathematical order, has been replaced by the atomistic void. There is no bottom nor top, because there is no absolute up or down in the atomistic system. Descartes writes: "Archimedes used to demand just one firm and immovable point in order to shift the entire earth; so I too can hope for great things if I manage to find just one thing, however slight, that is certain and unshakeable." Descartes phrases this search as an epistemological one: he ostensibly searches for one proposition that is not susceptible to the skeptical argument. But it is actually a metaphysical search: he searches for some object in the world that the Church Fathers have not been wrong about, some object which will sustain his religious faith.</p>
 
-<h3>Paragraph 3</h3>
-
-<p>The skepticism has proven to be a roundabout way of arriving at an argument from conceptability.</p>
+<p>Descartes thus establishes a binary value structure, where Forms, Knowledge, and Christianity are goods, and Atomism, Skepticism, Atheism are evils. Of course, he will concede that substantial forms do not exist except in the case of the human soul. But he is anxious to replace the Aristotelian model of knowledge of the forms with knowledge of the underlying conditions of materialistic object, namely space, time, and the laws of nature. (Kant would be following this line of argumentation closely.)</p>
 
 <h3>Paragraph 5</h3>
 
@@ -820,11 +906,22 @@ The Latin text is from the 1897-1910 edition produced in Paris by Adam and Tanne
 
 <h3>Paragraph 7</h3>
 
-<p>Descartes confuses conceivability with possibility. A common mistake also among Analytic philosphers.</p>
+<p>Descartes here confuses conceivability with possibility. Indeed, it is arguable that whole exercise of radical skepticism was simply a way to support premise (1) below. His argument might be explicated as follows:</p>
+<ol>
+<li>I can imagine a world where I exist but in which there are no bodies.</li>
+<li>If I can imagine a state of affairs, then that state of affairs is possible.</li>
+<li>It is possible that I exist but there are no bodies.</li>
+<li>Therefore, I am not a body.</li>
+</ol>
+<p>Premise (1) is false, on my view, since we are nothing but bodies. But even if we concede premise (1), premise (2) is also false. It is a delusion of grandeur to suppose that our imagination tracks metaphysical or physical possibility. Why would it? The hidden presupposition for doing so is a presupposition of our rational, semi-divine nature, which is mystically connected to God or the divine Logos. And this presupposition is a veritable cancer at the heart of contemporary Analytic philsophy. Consider David Chalmers's very similar and very influential line of argumentation in The Consious Mind. It could be summarized as:
+<ol>
+<li>It is logically possible for a physically identical copy of oneself to exist, but for it to lack conscious experience.</li>
+<li>(2) If (1) is true, then facts about conscious experience are not identical to facts about physical constitutions.</li>
+<li>(3) Therefore, facts about conscious experience are not identical to facts about physical constitutions.</li>
+</ol>
+<p>There is a lot of Analytic jargon here that Descartes did not have at his disposal, such as "logical possibility" and "facts" as entities (indeed, the metaphysically most basic entities, according to Analytic philosophers). And, yes, Chalmers was conceding that conscious facts supervene on physical facts, etc. But once you cut through all the curlicues, the argument is fundamentally the same. I can imagine myself as a non-physical being (or I can imagine a physical copy of myself that is not me), therefore I am a non-physical being. But both argument stem from the same misprision, that our imaginative capcity (which Chalmers calls "logical possibiliy") is connected to the metaphysical structure of the universe. (This fantasy dates back to at least the Ancient Stoics, and Kant would perfect it.) Thus, we are left with the same line of resistance to Chalmers's argument as to Descartes. Premise (1) is false, since concious experience is nothing but a certain electro-chemical reaction in my body. But premise (2) is also false, because the human notion of "logical possibility" has no one-to-one correspondence with the way the universe actually is. Someone like Leibniz would claim that action at a distance is logically impossible, yet it exists.</p>
 
-<p>Descartes confuses the necessity of the uttered proposition "I exist" with the idea that he has a direct acquaintance with himself as a pure thinking being.</p>
-
-<p>Descartes's argument is quasi-question begging, because it presupposes the distinctness of mind and body. He presupposes that, when he is thinking about thoughts, he is not thinking about body. But, if thoughts are nothing but brain states, then this presupposition is false. He is always thinking about bodies, and he cannot conceive of anything that is not a body. There is therefore an asymmetry in his argument, similar to the asymmetry in the dream-skepticism argument. For someone who thinks that mind and body could be distinct, the argument goes forward. For the materialist, the argument is not persuasive. Does the presupposition that mind and body are possibly distinct have any plausibility of its own, which could win over the neutrals? Clearly it does, for it still persuades today and it gave rise to a whole school of Cartesian dualists. The challenge for the Epicurean is to identify why it has prima facie persuasiveness and to attempt to deflate that. But that is the subject of a different essay.</p>
+<p>In addition, Descartes's argument is quasi-question begging, because it presupposes the distinctness of mind and body. He presupposes that, when he is thinking about thoughts, he is not thinking about body. But, if thoughts are nothing but brain states, then this presupposition is false. He is always thinking about bodies, and he cannot conceive of anything that is not a body. There is therefore an asymmetry in his argument, similar to the asymmetry in the dream-skepticism argument. For someone who thinks that mind and body could be distinct, the argument goes forward. For the materialist, the argument is not persuasive. Does the presupposition that mind and body are possibly distinct have any plausibility of its own, which could win over the neutrals? Clearly it does, for it still persuades today and it gave rise to a whole school of Cartesian dualists. The challenge for the Epicurean is to identify why it has prima facie persuasiveness and to attempt to deflate that. But that is the subject of a different essay.</p>
 
 <h3>Paragraph 9</h3>
 
@@ -838,7 +935,7 @@ The Latin text is from the 1897-1910 edition produced in Paris by Adam and Tanne
 
 <h3>Paragraphs 10 & 11</h3>
 
-<p>Descartes's argument here might be syllogized as:
+<p>Descartes's argument here might be explicated as:
 <ol>
 <li>Our perceptions of objects change whilst the objects remain the same.</li>
 <li>Our intuitions of objects do not change whilst the objects remain the same.</li>
