More accented epsilons

--- a/Second_Meditation_Veitch_Bilingual (master).html
+++ b/Second_Meditation_Veitch_Bilingual (master).html
@@ -11,7 +11,7 @@
 <h1>Descartes's Second Meditation – Adam-Tannery & Veitch – Latin and English Text – Translator's Version</h1>
 
 <h3>Source</h3>
-The Latin text is from the 1897-1910 edition produced in Paris by Adam and Tannery, pulled from Wikisource (https://la.wikisource.org/wiki/Meditationes_de_prima_philosophia_(Adam_et_Tannery)). The English text is from the John Veitch translation published in Chicago in 1913, which can be found at the Internet Archive here: (https://archive.org/details/themeditatiions00descuoft/page/n7/mode/2up) and at Wikisource here (https://en.wikisource.org/wiki/Meditations_on_First_Philosophy/Meditation_II).
+The Latin text is from the 1897-1910 edition produced in Paris by Adam and Tannery, pulled from Wikisource (https://la.wikisource.org/wiki/Meditationes_de_prima_philosophia_(Adam_et_Tannery)/Meditatio_II). The English text is from the John Veitch translation published in Chicago in 1913, which can be found at the Internet Archive here: (https://archive.org/details/themeditatiions00descuoft/page/n7/mode/2up) and at Wikisource here (https://en.wikisource.org/wiki/Meditations_on_First_Philosophy/Meditation_II).
 <br>
 <br>
 
@@ -880,13 +880,109 @@ The Latin text is from the 1897-1910 edition produced in Paris by Adam and Tanne
         But when I distinguish the wax from its exterior forms, and when, as if I had stripped it of its vestments, I consider it quite naked, it is certain, although some error may still be found in my judgment, that I cannot, nevertheless, thus apprehend it without possessing a human mind.
     </td>
 </tr>
+<tr>
+    <td>
+        15. Quid autem dicam de hac ipsâ mente, sive de me ipso?
+    </td>
+    <td> 
+        15. But finally, what shall I say of the mind itself, that is, of myself?
+    </td>
+</tr>
+<tr>
+    <td>
+        Nihildum enim aliud admitto in me esse praeter mentem.
+    </td>
+    <td> 
+        for as yet I do not admit that I am anything but mind.
+    </td>
+</tr>
+<tr>
+    <td>
+        Quid, inquam, ego qui hanc ceram videor tam distincte percipere? Nunquid me ipsum non tantùm multo verius, multo certius, sed etiam multo distinctius evidentiusque, cognosco?
+    </td>
+    <td> 
+        What, then! I who seem to possess so distinct an apprehension of the piece of wax, do I not know myself, both with greater truth and certitude, and also much more distinctly and clearly?
+    </td>
+</tr>
+<tr>
+    <td>
+        Nam, si judico ceram existere, ex eo quod hanc videam, certe multo evidentius efficitur me ipsum etiam existere, ex eo ipso quod hanc videam.
+    </td>
+    <td> 
+        For if I judge that the wax exists because I see it, it assuredly follows, much more evidently, that I myself am or exist, for the same reason:
+    </td>
+</tr>
+<tr>
+    <td>
+        Fieri enim potest ut hoc quod video non vere sit cera; fieri potest ut ne quidem oculos habeam, quibus quidquam videatur; sed fieri plane non potest, cùm videam, sive (quod jam non distinguo) cùm cogitem me videre, ut ego ipse cogitans non aliquid sim.
+    </td>
+    <td> 
+        for it is possible that what I see may not in truth be wax, and that I do not even possess eyes with which to see anything; but it cannot be that when I see, or, which comes to the same thing, when I think I see, I myself who think am nothing.
+    </td>
+</tr>
+<tr>
+    <td>
+        Simili ratione, si judico ceram esse, ex eo quod hanc tangam, idem rursus efficietur, videlicet me esse.
+    </td>
+    <td> 
+        So likewise, if I judge that the wax exists because I touch it, it will still also follow that I am;
+    </td>
+</tr>
+<tr>
+    <td>
+        Si ex eo quod imaginer, vel quâvis aliâ ex causâ, idem plane.
+    </td>
+    <td> 
+        and if I determine that my imagination, or any other cause, whatever it be, persuades me of the existence of the wax, I will still draw the same conclusion.
+    </td>
+</tr>
+<tr>
+    <td>
+        Sed & hoc ipsum quod de cerâ animadverto, ad reliqua omnia, quae sunt extra me posita, licet applicare.
+    </td>
+    <td> 
+        And what is here remarked of the piece of wax, is applicable to all the other things that are external to me.
+    </td>
+</tr>
+<tr>
+    <td>
+        Porro autem, si magis distincta visa sit cerae perceptio, postquam mihi, non ex solo visu vel tactu, sed pluribus ex causis innotuit, quanto distinctiùs me ipsum a me nunc cognosci fatendum est, quandoquidem nullae rationes vel ad cerae, vel ad cu juspiam alterius corporis perceptionem possint juvare, quin eaedem omnes mentis meae naturam melius probent!
+    </td>
+    <td> 
+        And further, if the [notion or] perception of wax appeared to me more precise and distinct, after that not only sight and touch, but many other causes besides, rendered it manifest to my apprehension, with how much greater distinctness must I now know myself, since all the reasons that contribute to the knowledge of the nature of wax, or of any body whatever, manifest still better the nature of my mind?
+    </td>
+</tr>
+<tr>
+    <td>
+        Sed & alia insuper tam multa sunt in ipsâ mente, ex quibus ejus notitia distinctior reddi potest, ut ea, quae ex corpore ad illam emanant, vix numeranda videantur.
+    </td>
+    <td> 
+        And there are besides so many other things in the mind itself that contribute to the illustration of its nature, that those dependent on the body, to which I have here referred, scarcely merit to be taken into account.
+    </td>
+</tr>
+<tr>
+    <td>
+        16. Atque ecce tandem sponte sum reversus eò quò volebam; nam cùm mihi nunc notum sit ipsamet corpora, non proprie a sensibus, vel ab imaginandi facultate, sed a solo intellectu percipi, nec ex eo percipi quòd tangantur aut videantur, sed tantùm ex eo quod intelligantur aperte cognosco nihil facilius aut evidentius meâ mente posse a me percipi.
+    </td>
+    <td> 
+        16. But, in conclusion, I find I have insensibly reverted to the point I desired; for, since it is now manifest to me that bodies themselves are not properly perceived by the senses nor by the faculty of imagination, but by the intellect alone; and since they are not perceived because they are seen and touched, but only because they are understood [or rightly comprehended by thought], I readily discover that there is nothing more easily or clearly apprehended than my own mind.
+    </td>
+</tr>
+<tr>
+    <td>
+        Sed quia tam cito deponi veteris opinionis consuetudo non potest, placet hîc consistere, ut altius haec nova cognitio memoriae meae diuturnitate meditationis infigatur.
+    </td>
+    <td> 
+        But because it is difficult to rid one's self so promptly of an opinion to which one has been long accustomed, it will be desirable to tarry for some time at this stage, that, by long continued meditation, I may more deeply impress upon my memory this new knowledge. 
+    </td>
+</tr>
 </table>
 
 <h1>Commentary</h1>
 
 <h3>Summary</h3>
 
-<p></p>
+<p>Descartes attempts to show that bodies are not properly perceived by the senses nor by the faculty of imagination, but by the intellect alone. As a corrolary, he argues that, since bodies are not perceived because they are seen and touched but only because they are comprehended by thought, then there is nothing more easily or clearly apprehended than one's own mind.</p>
 
 <h3>Paragraph 1</h3>
 
@@ -948,6 +1044,10 @@ Where does this argument go wrong? It presupposes the existence of a faculty of 
 <p>It's also worth noticing how unjustified the assertion of the faculty of mental intuition is, on Descartes's stated assumption that he is only believing in things that are indubitable. So far, his ontology only consists of a single thinking thing, since the proposition "I exist" is necessarily true whenever it's asserted by a thinking thing. But now he abruptly leaps to claiming that this thinking thing has the capacity to directly intuit 3-dimensionality and corporeality.</p>
 
 <p>Why does Descartes feel obligated to advance the wax argument? He could have simply relied on the argument-from-conceivability to show that immaterial minds exist. Why does he feel that he needs to undermine the importance of sense perception, or conversesly, bolster the importance of pure intution? It seems plausible that it's because Descartes has realized in advance that perception will cause difficulties for his dualist system. "How to explain the interaction between the mind and the body? Shouldn't we just dispense with the idea of an immaterial mind?"" Descartes thus uses attack as the best form of defence and attempts to argue that the external world is "perceived" by the mind alone, without need for the body. Here we begin to see the retreat into the self and the reification of models (in this case Cartesian geometry) to replace ther real world, which will come to dominate Western philosophy henceforth.</p>
+
+<h3>Paragraphs 16</h3>
+
+<p>Here we see that both threads of the first two Meditations have been striving toward the same point. The skepticism of the First Meditation led toward solipsism. And the wax argument of the Second Meditation concludes that objects are primarily perceived by the intellect, rather than the senses. These converge in a sort of retreat to a Neo-Platonist position, in which selves are rational souls shackled and living in a world of illusion. Descartes's inherent need to simplify and axiomatize makes it inevitable that he would clash with the Aristotelian and the Aquinean, which are essentially baroque and complicated.</p>
 
 <h3>Conclusion</h3>
 
