Yet more accented epsilons

--- a/Third_Meditation_Veitch_Bilingual (master).html
+++ b/Third_Meditation_Veitch_Bilingual (master).html
@@ -224,6 +224,40 @@ The Latin text is from the 1897-1910 edition produced in Paris by Adam and Tanne
         Others, again, have certain other forms; as when I will, fear, affirm, or deny, I always, indeed, apprehend something as the object of my thought, but I also embrace in thought something more than the representation of the object; and of this class of thoughts some are called volitions or affections, and others judgments.
     </td>
 </tr>
+<tr>
+    <td>
+        6. Jam quod ad ideas attinet, si solae in se spectentur, nec ad aliud quid illas referam, falsae proprie esse non possunt; nam sive capram, sive chimaeram imaginer, non minus verum est me unam imaginari quàm alteram.
+    </td>
+    <td>
+        6. Now, with respect to ideas, if these are considered only in themselves, and are not referred to any object beyond them, they cannot, properly speaking, be false; for, whether I imagine a goat or chimera, it is not less true that I imagine the one than the other.
+    </td>
+</tr>
+<tr>
+    <td>
+        Nulla etiam in ipsâ voluntate, vel affectibus, falsitas est timenda; nam, quamvis prava, quamvis etiam ea quae nusquam sunt, possim optare, non tamen ideo non verum est illa me optare.
+    </td>
+    <td>
+        Nor need we fear that falsity may exist in the will or affections; for, although I may desire objects that are wrong, and even that never existed, it is still true that I desire them.
+    </td>
+</tr>
+<tr>
+    <td>
+        Ac proinde sola supersunt judicia, in quibus mihi cavendum est ne fallar.
+    </td>
+    <td>
+        There thus only remain our judgments, in which we must take diligent heed that we be not deceived.
+    </td>
+</tr>
+<tr>
+    <td>
+        Praecipuus autem error & frequentissimus qui possit in illis reperiri, consistit in eo quòd ideas, quae in me sunt, judicem rebus quibusdam extra me positis similes esse sive conformes; nam profecto, si tantùm ideas ipsas ut cogitationis meae quosdam modos considerarem, nec ad quidquam aliud referrem, vix mihi ullam errandi materiam dare possent.
+    </td>
+    <td>
+        But the chief and most ordinary error that arises in them consists in judging that the ideas which are in us are like or conformed to the things that are external to us; for assuredly, if we but considered the ideas themselves as certain modes of our thought (consciousness), without referring them to anything beyond, they would hardly afford any occasion of error.
+    </td>
+</tr>
+
+
 
 
 </table>
